--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@ body {
 	padding: 5px;
 	background: linear-gradient(
 		-45deg,
-		#886644 0%,
-		#664488 50%,
-		#446688 100%
+		#664422 0%,
+		#442266 50%,
+		#224466 100%
 	);
 }
 
@@ -22,7 +22,7 @@ body {
 .separator {
 	margin: 0 5px;
 	font-size: 30px;
-	color: gray;
+	color: #777799;
 }
 
 .tab {
@@ -32,7 +32,7 @@ body {
 	border: none;
 	background: transparent;
 	font-family: "Open Sans";
-	color: #999999;
+	color: #777799;
 	cursor: pointer;
 }
 
@@ -52,11 +52,11 @@ body {
 
 .tab.active {
 	pointer-events: none;
-	color: #337799;
+	color: #00ffff;
 }
 
 .tab:hover {
-	color: #448899;
+	color: #0099ff;
 }
 
 .product-items {
@@ -68,7 +68,7 @@ body {
    width: 250px;
    text-align: center;
    margin: 0 auto;
-   border: 1px solid #7a7a7a;
+   border: 1px solid #999999;
    border-radius: 10px;
    background: #ffffff;
    font-family: "Open Sans";
@@ -80,13 +80,13 @@ body {
    width: 100%;
 }
 .product-list {
-   background: #fafafa;
+   background: #cccccc;
    padding: 15px 0;
 }
 .product-list h3 {
    font-size: 18px;
    font-weight: 400;
-   color: #444444;
+   color: #cccccc;
    margin: 0 0 10px 0;
 }
 .price {
@@ -96,8 +96,8 @@ body {
 }
 .button {
    padding: 6px 12px;
-   background: #cccccc;
-   color: white;
+   background: #777799;
+   color: #ffffff;
    text-transform: uppercase;
    font-size: 12px;
    transition: .3s ease;
