--- a/style.css
+++ b/style.css
@@ -65,47 +65,47 @@ body {
 }
 
 .product-item {
-   width: 250px;
-   text-align: center;
-   margin: 0 auto;
-   border: 1px solid #999999;
-   border-radius: 10px;
-   background: #ffffff;
-   font-family: "Open Sans";
-   transition: .3s ease;
-   overflow: hidden;
+    width: 250px;
+    text-align: center;
+    margin: 0 auto;
+    border: 1px solid #999999;
+    border-radius: 10px;
+    background: #ffffff;
+    font-family: "Open Sans";
+    transition: .3s ease;
+    overflow: hidden;
 }
 .product-item img {
-   display: block;
-   width: 100%;
+    display: block;
+    width: 100%;
 }
 .product-list {
-   background: #cccccc;
-   padding: 15px 0;
+    background: #cccccc;
+    padding: 15px 0;
 }
 .product-list h3 {
-   font-size: 18px;
-   font-weight: 400;
-   color: #cccccc;
-   margin: 0 0 10px 0;
+    font-size: 18px;
+    font-weight: 400;
+    color: #0099ff;
+    margin: 0 0 10px 0;
 }
 .price {
-   color: #fc5a5a;
-   margin-top: 0px;
-   margin-bottom: 12px;
+    color: #fc5a5a;
+    margin-top: 0px;
+    margin-bottom: 12px;
 }
 .button {
-   padding: 6px 12px;
-   background: #777799;
-   color: #ffffff;
-   text-transform: uppercase;
-   font-size: 12px;
-   transition: .3s ease;
-   border: none;
-   cursor: pointer;
+    padding: 6px 12px;
+    background: #777799;
+    color: #ffffff;
+    text-transform: uppercase;
+    font-size: 12px;
+    transition: .3s ease;
+    border: none;
+    cursor: pointer;
 }
 .button:hover {
-   background: #fc5a5a;
+    background: #fc5a5a;
 }
 
 .cart-items {
