--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 * {
 	box-sizing: border-box;
 }
+
 body {
 	font-family: 'Montserrat', sans-serif;
 	height: 100vh;
@@ -16,27 +17,29 @@ body {
 	);         
 	background-attachment: fixed;
 }
+
 .tabs {
-	width: 100vh;
 	display: flex;
 	align-items: center;
-	align-content: center;
 	margin-bottom: 10px;
 }
+
 .separator {
 	margin: 0 5px;
-	font-size: 20px;
+	font-size: 30px;
 	color: #ffffff;
 }
+
 .tab {
 	display: flex;
 	align-items: center;
-	font-size: 20px;
+	font-size: 30px;
 	border: none;
 	background: transparent;
 	color: #ffaa00;
 	cursor: pointer;
 }
+
 .cart-tab::after {
 	content: attr(data-goods-count);
 	display: flex;
@@ -50,13 +53,16 @@ body {
 	width:  25px;
 	border-radius: 50%;
 }
+
 .tab.active {
 	pointer-events: none;
 	color: #ffffff;
 }
+
 .tab:hover {
 	color: #ffff00;
 }
+
 .product-items {
 	display: grid;
 	grid-template-columns:
@@ -65,6 +71,7 @@ repeat(auto-fill, 200px) 5%;
 	grid-gap: 5px;
 	gap: 5px;
 }
+
 .product-item {
     width: 200px;
     text-align: center;
@@ -113,6 +120,7 @@ repeat(auto-fill, 200px) 5%;
 .button:hover {
     background: #ffff00;
 }
+
 .cart-items {
 	display: flex;
 	flex-direction: column;
@@ -120,15 +128,18 @@ repeat(auto-fill, 200px) 5%;
 	color:  #ffffff;
 	border-radius: 5px;
 }
+
 .cart-item {
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
 	color:  #ffffff;
 }
+
 .cart-item-price {
 	font-weight: bold;
 	color:  #ffffff;
 }
+
 .cart-item-delete {
 	background: #ff3333;
 	color:  #ffffff;
@@ -136,6 +147,7 @@ repeat(auto-fill, 200px) 5%;
 	border-radius: 5px;
 	width: 30px;
 }
+
 .shapka {
 	border: 1px solid #442266;
     border-radius: 5px;
@@ -143,8 +155,8 @@ repeat(auto-fill, 200px) 5%;
 	color: #ffffff;
 	text-align: center;
 	padding: 5px;
-	flex: 1 1 auto;
 }
+
 .podval {
 	border: 1px solid #442266;
     border-radius: 5px;
@@ -152,18 +164,6 @@ repeat(auto-fill, 200px) 5%;
 	color: #ffffff;
 	text-align: center;
 	padding: 5px;
-	flex: 1 1 auto;
-}
-.wrapper {
-	display: flex;
-	flex-direction: column;
-	height: 100%;
-}
-main {
-	flex: 1 0 auto;
-}
-footer {
-	flex: 0 0 auto;
 }
 
 /* ТЁМНАЯ ТЕМА */
@@ -181,16 +181,18 @@ body.dark-theme {
 		);         
 		background-attachment: fixed;
 	}
+	
 	body.dark-theme .shapka {
-		border: 1px solid #ffffff;
+		border: 1px solid #cc99ff;
 		border-radius: 5px;
 		background: #eeddffdd;
 		color: #442266;
 		text-align: center;
 		padding: 5px;
 	}
+	
 	body.dark-theme .podval {
-		border: 1px solid #ffffff;
+		border: 1px solid #cc99ff;
 		border-radius: 5px;
 		background: #eeddffdd;
 		color: #442266;
@@ -201,7 +203,7 @@ body.dark-theme {
 		width: 200px;
 		text-align: center;
 		margin: 0 auto;
-		border: 1px solid #ffffff;
+		border: 1px solid #cc99ff;
 		border-radius: 5px;
 		background: #eeddffdd;
 		transition: .3s ease;
