--- a/style.css
+++ b/style.css
@@ -165,6 +165,19 @@ repeat(auto-fill, 200px) 5%;
 	text-align: center;
 	padding: 5px;
 }
+/*кнопка день/ночь*/
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 700,
+  'GRAD' 0,
+  'opsz' 40
+}
+
+.btn-toggle{
+	cursor: pointer;
+}
 
 /* ТЁМНАЯ ТЕМА */
 body.dark-theme {
@@ -239,7 +252,6 @@ body.dark-theme {
 	body.dark-theme .button:hover {
 		background: #ff7700;
 	}
-
 
 
 
